Fix text overflow.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -164,3 +164,8 @@ a:active {
 .dialog-popup button {
     margin: 5px;
 }
+
+#panel table td {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
